--- a/index.html
+++ b/index.html
@@ -128,18 +128,16 @@
                             <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M13.091 4.18182L6.091 11.1818L2.90918 8.00001" stroke="#f6f8f8" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
-                            <h3>XX-double Bacon</h3>
+                            <h3>Hamburgueria on fire</h3>
                             <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim.</p>
-
                         </div>
 
                         <div class="card">
                             <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M13.091 4.18182L6.091 11.1818L2.90918 8.00001" stroke="#f6f8f8" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
-                            <h3>Picanha on fire</h3>
+                            <h3>Picanha</h3>
                             <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim.</p>
-
                         </div>
 
                         <div class="card">
@@ -148,7 +146,6 @@
                             </svg>
                             <h3>Veggie gourmet</h3>
                             <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim.</p>
-
                         </div>
 
                         <div class="card">
@@ -157,7 +154,6 @@
                             </svg>
                             <h3>File mignon com molho de alho</h3>
                             <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim.</p>
-
                         </div>
                     
                         <div class="card">
@@ -166,7 +162,14 @@
                             </svg>
                             <h3>Double Chicken</h3>
                             <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim.</p>
+                        </div>
 
+                        <div class="card">
+                            <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M13.091 4.18182L6.091 11.1818L2.90918 8.00001" stroke="#f6f8f8" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>
+                            <h3>Tex-Mex</h3>
+                            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim.</p>
                         </div>
 
                         <div class="card">
@@ -175,11 +178,27 @@
                             </svg>
                             <h3>X-double Cheddar</h3>
                             <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim.</p>
-
                         </div>
+                    
+                        <div class="card">
+                            <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M13.091 4.18182L6.091 11.1818L2.90918 8.00001" stroke="#f6f8f8" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>
+                            <h3>X-double Bacon</h3>
+                            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim.</p>
+                        </div>
+
+                        <div class="card">
+                            <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M13.091 4.18182L6.091 11.1818L2.90918 8.00001" stroke="#f6f8f8" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>
+                            <h3>Crispy picante</h3>
+                            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim.</p>
+                        </div>
+
+
                     </div>
                 </div>
-
             </header>
         </div>
     </section>
