--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
           <div class="content">
             <div class="cards">
               <div class="card">
-                <img src="assets/1.jpg" alt="" />
+                <img src="assets/1.jpg" alt="Foto de um hamburguer" />
                 <h3>On fire</h3>
                 <p>
                   Amet minim mollit non deserunt ullamco est sit aliqua dolor do
@@ -237,7 +237,7 @@
               </div>
 
               <div class="card">
-                <img src="assets/2.jpg" alt="" />
+                <img src="assets/2.jpg" alt="Foto de um hamburguer" />
                 <h3>Picanha</h3>
                 <p>
                   Amet minim mollit non deserunt ullamco est sit aliqua dolor do
@@ -246,7 +246,7 @@
               </div>
 
               <div class="card">
-                <img src="assets/5.jpg" alt="" />
+                <img src="assets/5.jpg" alt="Foto de um hamburguer" />
                 <h3>Veggie gourmet</h3>
                 <p>
                   Amet minim mollit non deserunt ullamco est sit aliqua dolor do
@@ -255,7 +255,7 @@
               </div>
 
               <div class="card">
-                <img src="assets/4.jpg" alt="" />
+                <img src="assets/4.jpg" alt="Foto de um hamburguer" />
                 <h3>File mignon com molho de alho</h3>
                 <p>
                   Amet minim mollit non deserunt ullamco est sit aliqua dolor do
@@ -264,7 +264,7 @@
               </div>
 
               <div class="card">
-                <img src="assets/3.jpg" alt="" />
+                <img src="assets/3.jpg" alt="Foto de um hamburguer" />
                 <h3>Chicken Jr</h3>
                 <p>
                   Amet minim mollit non deserunt ullamco est sit aliqua dolor do
@@ -273,7 +273,7 @@
               </div>
 
               <div class="card">
-                <img src="assets/6.jpg" alt="" />
+                <img src="assets/6.jpg" alt="Foto de um hamburguer" />
                 <h3>Tex-Mex</h3>
                 <p>
                   Amet minim mollit non deserunt ullamco est sit aliqua dolor do
